test/sema/mutable-parameter-type.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

// CHECK: [[@LINE+1]]:10: error: parameter types cannot be 'mutable'
func foo(i: mutable int) { }
